style/general.css
/* General */

body {
  font-family: Outfit, sans-serif;
  /* background: Lavender; */
  background: GhostWhite;
  color: Indigo;
  line-height: 1.5;
  font-size: 18px;
}

h1 {
  font-size: 48px;
  font-weight: bold;
}

h2 {
  font-size: 32px;
  font-weight: bold;
}

h3 {
  font-size: 24px;
  font-weight: bold;
}

header {
  padding: 32px;
}

header .Sample {
  margin: 24px;
}

.lead {
  text-align: center;
}

.no-break {
  white-space: nowrap;
}

h1,
h2,
h3 {
  line-height: 1;
  margin: 32px 0 16px 0;
}

.contain {
  padding-left: 24px;
  padding-right: 24px;
}

p {
  margin: 16px auto;
  /* width: 100%; */
  max-width: 480px;
}

a {
  color: DeepPink;
}

a:hover {
  color: HotPink;
}

#app {
  width: 100%;
}

main {
  width: 100%;
}

section {
  width: 100%;
}

header,
main,
aside,
footer,
section,
figure {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Screen Readers */

.screen-reader-only:not(fieldset):not(:focus):not(:active),
fieldset.screen-reader-only legend,
input[type="color"],
input[type="radio"],
input[type="checkbox"] {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

fieldset.screen-reader-only {
  border: none;
  margin: 0;
  padding: 0;
}

/* Use cases */

aside {
  padding: 32px 0;
  background: GhostWhite;
  color: Indigo;
}

aside .ul-wrapper {
  width: 100%;
  overflow-x: auto;
}

aside ul {
  display: flex;
  /* background: pink; */
  width: fit-content;
  margin: 48px auto;
}

aside ul li {
  width: 33.333vw;
  max-width: 360px;
  min-width: 288px;
  margin: 8px;
  font-size: 16px;
  flex-shrink: 0;
}

aside ul img {
  border-radius: 4px;
  transition: box-shadow 0.2s;
  box-shadow: 0 0 0 2px transparent;
}

aside ul a:hover img {
  box-shadow: 0 0 0 2px DeepPink;
}

aside small {
  opacity: 0.5;
}

/* Footer */

footer {
  padding: 32px 16px;
  background: Indigo;
  color: Lavender;
  font-size: 16px;
  text-align: center;
}

/* Icons */
.feather + span,
.feather + p {
  margin-left: 8px;
}

#playground {
  display: flex;
  width: calc(100% - 48px);
  max-width: 100%;
  height: 90vh;
  max-height: 800px;
  max-width: 1280px;
  margin: 48px auto;
  border-radius: 4px;
  overflow: hidden;
}

#controls {
  flex-shrink: 0;
  background: Lavender;
  background: Indigo;
  color: GhostWhite;
  overflow-y: auto;
  padding: 16px 0;
}

#canvas {
  display: flex;
  flex-direction: column;
  background: Lavender;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.scroll-container {
  position: relative;
  display: flex;
  overflow: auto;
  width: 100%;
  max-width: 100%;
  height: 100%;
  max-height: 100%;
}

.scroll-item {
  display: block;
  margin: 0 auto;
  position: relative;
  width: fit-content;
  height: fit-content;
  padding: 24px;
}

.bottom-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: fit-content;
}

.top-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: fit-content;
}

